--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
+<h2 style="position=absolute">CANLI VERİLERLE MAKİNE ÖĞRENMESİ</h2>
+<button type="button" onclick="init()">TEST BAŞLA</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
