--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+                labelContainer.childNodes[i].innerHTML = classPrediction;
             
           <div class="name-progress">${classPrediction}</div>
             <div class="progress">
