--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                labelContainer.childNodes[i].innerHTML =  `
+                labelContainer.childNodes[i].innerHTML = 
           <div class="name-progress">${classPrediction}</div>
             <div class="progress">
               <div class="inner-progress" style="width:${prediction[i].probability.toFixed(2)*100}%">${prediction[i].probability.toFixed(2)*100}%
              </div>
-          </div>`;
+          </div>
         }
     }
 </script>
