--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<h2 style="position=absolute">teachable machine</h2>
-<button type="button" onclick="init()">TEST BAŞLA</button>
+<div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -9,7 +9,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "./";
+    const URL = "./my_model/";
 
     let model, webcam, labelContainer, maxPredictions;
 
@@ -53,13 +53,7 @@
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                labelContainer.childNodes[i].innerHTML = 
-          <div class="name-progress">${classPrediction}</div>
-            <div class="progress">
-              <div class="inner-progress" style="width:${prediction[i].probability.toFixed(2)*100}%">${prediction[i].probability.toFixed(2)*100}%
-             </div>
-          </div>
+            labelContainer.childNodes[i].innerHTML = classPrediction;
         }
     }
 </script>
-
